news api integrated with basic ui and added necessary envs

--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -19,3 +19,9 @@
 .chipParent {
     margin: 20px 0px;
 }
+
+.fetchBtnParent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
