--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,4 +1,4 @@
-.homeParent{
+.homeParent {
     width: 100vw;
     display: flex;
     justify-content: center;
@@ -6,7 +6,7 @@
     flex-direction: column;
 }
 
-.homeContentDiv{
+.homeContentDiv {
     width: 500px;
 }
 
@@ -24,4 +24,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media screen and (max-width:600px) {
+    .homeContentDiv {
+        width: 80vw;
+    }
 }
